methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:4: error: not found: value testavant
def isFacingTrail():Boolean = {if (testavant()) {avance();};return estSurBiscuit()}
                                   ^